2005.12.01
---------
- fixes for formatters
- fixes to use vernacular_name instead of default_vernacular_name in abcd.py
- Accession and Plant now have markup() which give the species name
- some searchview fixes

2005.11.26
---------
- hopefully fixes some unstableness by not deleting the dialog of a 
TreeViewEditorDialog
- changed the model again to add a notes column to both Plant and 
Accession
- bumped revision to 0.3.0 because of change to the model


2005.11.24
---------
- fixed editing a species giving a message as if you were adding a new
one
- fixed markup tag on species


2005.11.23
---------
- added some more safety check that you're not connected to a corrupt
- fixed a problem when on committing multiple items in an editor
- csv export is painfully slow, need to do something about it
- fixe for expanding a species
- 0.2.0 and 0.2.1 was tagged but not release
- released 0.2.2


2005.11.23
---------
- changed version to 0.2.0 since we're not using the VernacularName table
at the moment altough there was never a way to edit it
- some fixes for the connection manager so it acts the way you would 
expect it to, could still use some love
- 

2005.11.23
--------
- remove most of the null values from the EnumCols
- gave up on the VernacularName table and editor at the moment and just
made a Species.vernacular_name UnicodeCol


2005.11.22
---------
- forgot to fix the VernacularName editor
- made ABCD export and more xml safe


2005.11.20
---------
- fixed bug when trying to cancel importing CSV files
- the combined plant_id and accession_id of Plant now have to be unique
- removed most of the None default values from the EnumCols
- release 0.1.1


2005.11.19
---------
- fixed some logic in editor.py so that the editor dialog acts as expected
when you close it
- fixed the donor editor so it works correctly
- registered the 'donor' and 'don' keywords for the search view
- made some dummy classes for DonorInfoBox and its expanders, now it just